_course_files/2 Traffic - Starting Files/6-istio-rules.yml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
  metadata:
    name: fleetman-staff-service
    namespace: default
  spec:
    hosts:
    - fleetman-staff-service.default.svc.cluster.local
    http:
    - route:
      - destination:
          host: fleetman-staff-service.default.svc.cluster.local
          subset: safe
        weight: 70
      - destination:
          host: fleetman-staff-service.default.svc.cluster.local
          subset: risky
        weight: 30
---
- apiVersion: networking.istio.io/v1beta1
  kind: DestinationRule
  metadata:
    name: fleetman-staff-service
    namespace: default
  spec:
    host: fleetman-staff-service.default.svc.cluster.local
    subsets:
    - labels:
        version: safe
      name: safe
    - labels:
        version: risky
      name: risky
